# notebook-to-prod-template

./: .coveragerc  .coveragerc-critical  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  example.ipynb  pyproject.toml  pytest.ini  requirements.txt  run.ps1  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: Dockerfile  main.py  runner.py  schemas.py
app/.github/workflows/: ci.yml
data/: input.csv
data/processed/: concept_features.csv  extracted_features.json
notebook-execution-service/: Chart.yaml  values.yaml
notebook-execution-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
notebooks/: example.ipynb  semantic_feature_extraction.ipynb  sfe.ipynb
scripts/: list_cells.py  list_imports.py
src/: cli.py  emotion.py  graph_builder.py  runner.py
src/notebook_service/: __init__.py  cli.py  emotion.py  graph_builder.py  main.py  runner.py  schemas.py  visualization.py  visualize.py
src/notebook_service/config/: dbpedia_exclusions.json
tests/: conftest.py  test_emotion.py  test_main.py  test_runner.py
tests/notebook_service/: test_cli.py  test_emotion.py  test_graph_builder.py  test_headers_and_health_dev.py  test_init.py  test_main.py  test_runner.py  test_visualization.py
