[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "setuptools_scm>=6.0"        # for auto‐versioning
]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-to-prod-template"
dynamic = ["version"]
description = "Execute Jupyter notebooks via REST and return their outputs"
authors = [
  { name = "Brittany L. Bales", email = "412bales@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<4.0"


dependencies = [
  # Web framework & server
  "fastapi[standard]==0.115.13",
  "uvicorn[standard]==0.34.3",

  # Notebook execution & kernels
  "nbclient==0.10.2",
  "ipykernel>=6.29.5,<7",
  "nbformat>=5.7.0",
  "jupyter-core>=5.8.1",

  # Data processing & NLP
  "pandas==2.3.0",
  "networkx>=3.1",
  "matplotlib>=3.7.1",            # for your visualize_graph tests
  "python-dotenv>=1.1.1",         # if you load .env files in main or elsewhere
  "scikit-learn==1.7.0",

  # Community detection & text‐adjustment (needed at runtime!)
  "python-louvain>=0.16",
  "adjustText>=0.8",

  # IBM Watson SDK
  "ibm-watson==10.0.0",
  "ibm-cloud-sdk-core>=3.0",    # pin a minimum version

  # CLI
  "click>=8.0",

  "nest_asyncio>=1.5.6",
]

[project.optional-dependencies]
dev = [
  # Testing & linting (CI)
  "pytest==8.4.1",
  "pytest-cov>=4.0.0",
  "flake8==7.3.0",
  "black[jupyter]==24.3.0",
  "nbqa==1.9.1",
  "isort==5.12.0",
  "pre-commit==3.4.0",
  "setuptools>=65.5.1",
  "pip-audit==2.6.1",
  "ipykernel>=6.29.5,<7",
]

[project.scripts]
notebook-cli = "notebook_service.cli:main"

[tool.black]
line-length = 79




[tool.setuptools_scm]
# automatically derive versions from your git tags
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools]
package-dir = {"" = "src"}        # root package(s) live in ./src

[tool.setuptools.packages.find]
where = ["src"]                   # scan only the src/ tree

[tool.poetry]
# Disable Poetry package mode so it doesn't require a version when
# using PEP 621 [project] with dynamic versioning via setuptools_scm.
package-mode = false
